# locus

./: .dockerignore  .gitignore  Dockerfile  MULTI_USER_PLAN.md  README.md  SOURCE_REWRITE_PROMPT.md  SYSTEM_PROMPT.md  VISUALIZATION_PROMPT.md  compose.hosted.yaml  compose.pdf.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/: coolify.example.json
docker/pdf2markdown/: .dockerignore  Dockerfile  README.md  pyproject.toml
docker/pdf2markdown/src/pdf2markdown/: __init__.py  markdown_images.py  markdown_pages.py  mistral_images.py  mistral_ocr.py  persistent_service.py  persistent_store.py  service.py
docker/pdf2markdown/tests/: test_persistent_service.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LOCAL_CONFIGURATION.md  OPERATIONS.md
migrations/: 0002_locus_hosted.sql  0003_shared_chats.sql  0004_email_verification.sql  0005_onboarding_email.sql  0006_hosted_access_control.sql  0007_provider_connections.sql  0008_managed_usage_budgets.sql  0009_all_account_usage_attribution.sql  0010_deepseek_qwen_providers.sql
public/: manifest.webmanifest  service-worker.js
server/: access-routes.ts  access.ts  admin-access-routes.ts  admin-auth.ts  admin-routes.ts  admin.ts  auth.ts  config.ts  credentials.ts  db.ts  generations.ts  index.ts  managed-usage.ts  metapost.ts  migrate-cli.ts  migrate.ts  onboarding.ts  openai.ts  pdf-imports.ts  postmark.ts  pricing.ts  provider-connections.ts  provider-url.ts  providers.ts  shares.ts  social-meta.ts  storage.ts  tikz.ts  usage.ts  workspaces.ts
src/: App.tsx  main.tsx  runtime.ts  types.ts  (+1 more)
(+53 files in other folders)
