[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovis-pdf2markdown"
version = "0.1.0"
description = "Convert PDFs to equation-aware Markdown with local or Mistral OCR pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pillow>=10.4,<13",
  "pymupdf>=1.26,<2",
]

[project.optional-dependencies]
service = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
pdf2md = "pdf2markdown.cli:main"
mistral-hq-images = "pdf2markdown.mistral_images:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2markdown"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
